# medicalagent

./: README.md  database.db  generate_email.py  loop_agent.db  loop_agent.db-shm  loop_agent.db-wal  main.py  pyproject.toml  requirements.txt  tools.py  utility.py
agent/: agent.py  llm.py  loopagent.py  setup_model.py  test_agent.py
db/: migration.py  schema.py  synthetic_data_generation.py
streamlit/: main.py
