[project]
name = "medical-agent"
version = "0.1.0"
description = "agent that can look for available slot in doctors schedule and automatically appoint a schedule for client."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "llama-cpp-python>=0.3.31",
]
